.antlr/MxStarParser.java
// Generated from c:\Users\Anoxiacxy\Documents\GitHub\Compiler-MxStar\MxStar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxStarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TypeName=1, ClassIdentifier=2, FunctionIdentifier=3, FundamentalType=4, 
		BooleanLiteral=5, IntegerLiteral=6, StringLiteral=7, NullLiteral=8, PrintableChar=9, 
		Identifier=10, Comment=11, WhiteSpace=12, KeyWord=13, Int=14, Bool=15, 
		String=16, Null=17, Void=18, True=19, False=20, If=21, Else=22, For=23, 
		While=24, Break=25, Continue=26, Return=27, New=28, Class=29, This=30, 
		IdentifierSymbol=31, StandardOperator=32, RelationOperator=33, LogicalOperator=34, 
		BitwiseOperator=35, AssignOperator=36, IterateOperator=37, ComponentOperator=38, 
		PriorityOperator=39, SpecialSymbol=40, Space=41, NewLine=42, Tab=43, CommentSymbol=44, 
		LeftBrace=45, RightBrace=46, LeftBracket=47, RightBracket=48, LeftParenthesis=49, 
		RightParenthesis=50, Dot=51, Comma=52, Semi=53, Assign=54, PlusPlus=55, 
		MinusMinus=56, RightShift=57, LeftShift=58, BitwiseAnd=59, BitwiseOr=60, 
		BitwiseXor=61, BitwiseNeg=62, LogicalAnd=63, LogicalOr=64, LogicalNeg=65, 
		Greater=66, Less=67, GreaterEqual=68, LessEqual=69, NotEqual=70, Equal=71, 
		Plus=72, Minus=73, Mul=74, Div=75, Mod=76;
	public static final int
		RULE_program = 0, RULE_functionDefination = 1, RULE_constructDefination = 2, 
		RULE_classDefination = 3, RULE_variableDefination = 4, RULE_statement = 5, 
		RULE_blockStatement = 6, RULE_ifStatement = 7, RULE_whileStatement = 8, 
		RULE_forStatement = 9, RULE_returnStatement = 10, RULE_breakStatement = 11, 
		RULE_continueStatement = 12, RULE_expressionStatement = 13, RULE_succExpression = 14, 
		RULE_prefExpression = 15, RULE_multiExpression = 16, RULE_addiExpression = 17, 
		RULE_shiftExpression = 18, RULE_compareExpression = 19, RULE_equalExpression = 20, 
		RULE_bitAndExpression = 21, RULE_bitXorExpression = 22, RULE_bitOrExpression = 23, 
		RULE_logAndExpression = 24, RULE_logOrExpression = 25, RULE_assignExpression = 26, 
		RULE_listExpression = 27, RULE_expression = 28, RULE_primaryExpression = 29, 
		RULE_newExpression = 30, RULE_functionCallExpression = 31, RULE_identifierExpression = 32, 
		RULE_literal = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "functionDefination", "constructDefination", "classDefination", 
			"variableDefination", "statement", "blockStatement", "ifStatement", "whileStatement", 
			"forStatement", "returnStatement", "breakStatement", "continueStatement", 
			"expressionStatement", "succExpression", "prefExpression", "multiExpression", 
			"addiExpression", "shiftExpression", "compareExpression", "equalExpression", 
			"bitAndExpression", "bitXorExpression", "bitOrExpression", "logAndExpression", 
			"logOrExpression", "assignExpression", "listExpression", "expression", 
			"primaryExpression", "newExpression", "functionCallExpression", "identifierExpression", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'int'", "'bool'", "'string'", "'null'", "'void'", "'true'", 
			"'false'", "'if'", "'else'", "'for'", "'while'", "'break'", "'continue'", 
			"'return'", "'new'", "'class'", "'this'", null, null, null, null, null, 
			null, null, null, null, null, "' '", "'\n'", "'\t'", "'//'", "'{'", "'}'", 
			"'['", "']'", "'('", "')'", "'.'", "','", "';'", "'='", "'++'", "'--'", 
			"'>>'", "'<<'", "'&'", "'|'", "'^'", "'~'", "'&&'", "'||'", "'!'", "'>'", 
			"'<'", "'>='", "'<='", "'!='", "'=='", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TypeName", "ClassIdentifier", "FunctionIdentifier", "FundamentalType", 
			"BooleanLiteral", "IntegerLiteral", "StringLiteral", "NullLiteral", "PrintableChar", 
			"Identifier", "Comment", "WhiteSpace", "KeyWord", "Int", "Bool", "String", 
			"Null", "Void", "True", "False", "If", "Else", "For", "While", "Break", 
			"Continue", "Return", "New", "Class", "This", "IdentifierSymbol", "StandardOperator", 
			"RelationOperator", "LogicalOperator", "BitwiseOperator", "AssignOperator", 
			"IterateOperator", "ComponentOperator", "PriorityOperator", "SpecialSymbol", 
			"Space", "NewLine", "Tab", "CommentSymbol", "LeftBrace", "RightBrace", 
			"LeftBracket", "RightBracket", "LeftParenthesis", "RightParenthesis", 
			"Dot", "Comma", "Semi", "Assign", "PlusPlus", "MinusMinus", "RightShift", 
			"LeftShift", "BitwiseAnd", "BitwiseOr", "BitwiseXor", "BitwiseNeg", "LogicalAnd", 
			"LogicalOr", "LogicalNeg", "Greater", "Less", "GreaterEqual", "LessEqual", 
			"NotEqual", "Equal", "Plus", "Minus", "Mul", "Div", "Mod"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MxStar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MxStarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MxStarParser.EOF, 0); }
		public List<FunctionDefinationContext> functionDefination() {
			return getRuleContexts(FunctionDefinationContext.class);
		}
		public FunctionDefinationContext functionDefination(int i) {
			return getRuleContext(FunctionDefinationContext.class,i);
		}
		public List<ClassDefinationContext> classDefination() {
			return getRuleContexts(ClassDefinationContext.class);
		}
		public ClassDefinationContext classDefination(int i) {
			return getRuleContext(ClassDefinationContext.class,i);
		}
		public List<VariableDefinationContext> variableDefination() {
			return getRuleContexts(VariableDefinationContext.class);
		}
		public VariableDefinationContext variableDefination(int i) {
			return getRuleContext(VariableDefinationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TypeName) | (1L << Void) | (1L << Class))) != 0)) {
				{
				setState(71);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(68);
					functionDefination();
					}
					break;
				case 2:
					{
					setState(69);
					classDefination();
					}
					break;
				case 3:
					{
					setState(70);
					variableDefination();
					}
					break;
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinationContext extends ParserRuleContext {
		public TerminalNode FunctionIdentifier() { return getToken(MxStarParser.FunctionIdentifier, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode TypeName() { return getToken(MxStarParser.TypeName, 0); }
		public TerminalNode Void() { return getToken(MxStarParser.Void, 0); }
		public FunctionDefinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefination; }
	}

	public final FunctionDefinationContext functionDefination() throws RecognitionException {
		FunctionDefinationContext _localctx = new FunctionDefinationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionDefination);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==TypeName || _la==Void) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			match(FunctionIdentifier);
			setState(80);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructDefinationContext extends ParserRuleContext {
		public TerminalNode FunctionIdentifier() { return getToken(MxStarParser.FunctionIdentifier, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ConstructDefinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructDefination; }
	}

	public final ConstructDefinationContext constructDefination() throws RecognitionException {
		ConstructDefinationContext _localctx = new ConstructDefinationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constructDefination);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(FunctionIdentifier);
			setState(83);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefinationContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(MxStarParser.Class, 0); }
		public TerminalNode ClassIdentifier() { return getToken(MxStarParser.ClassIdentifier, 0); }
		public TerminalNode LeftBrace() { return getToken(MxStarParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(MxStarParser.RightBrace, 0); }
		public TerminalNode Semi() { return getToken(MxStarParser.Semi, 0); }
		public List<FunctionDefinationContext> functionDefination() {
			return getRuleContexts(FunctionDefinationContext.class);
		}
		public FunctionDefinationContext functionDefination(int i) {
			return getRuleContext(FunctionDefinationContext.class,i);
		}
		public List<ConstructDefinationContext> constructDefination() {
			return getRuleContexts(ConstructDefinationContext.class);
		}
		public ConstructDefinationContext constructDefination(int i) {
			return getRuleContext(ConstructDefinationContext.class,i);
		}
		public List<VariableDefinationContext> variableDefination() {
			return getRuleContexts(VariableDefinationContext.class);
		}
		public VariableDefinationContext variableDefination(int i) {
			return getRuleContext(VariableDefinationContext.class,i);
		}
		public ClassDefinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefination; }
	}

	public final ClassDefinationContext classDefination() throws RecognitionException {
		ClassDefinationContext _localctx = new ClassDefinationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDefination);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(Class);
			setState(86);
			match(ClassIdentifier);
			setState(87);
			match(LeftBrace);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TypeName) | (1L << FunctionIdentifier) | (1L << Void))) != 0)) {
				{
				setState(91);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(88);
					functionDefination();
					}
					break;
				case 2:
					{
					setState(89);
					constructDefination();
					}
					break;
				case 3:
					{
					setState(90);
					variableDefination();
					}
					break;
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(RightBrace);
			setState(97);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinationContext extends ParserRuleContext {
		public TerminalNode TypeName() { return getToken(MxStarParser.TypeName, 0); }
		public TerminalNode Semi() { return getToken(MxStarParser.Semi, 0); }
		public List<TerminalNode> Identifier() { return getTokens(MxStarParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MxStarParser.Identifier, i);
		}
		public List<TerminalNode> LeftBracket() { return getTokens(MxStarParser.LeftBracket); }
		public TerminalNode LeftBracket(int i) {
			return getToken(MxStarParser.LeftBracket, i);
		}
		public List<TerminalNode> RightBracket() { return getTokens(MxStarParser.RightBracket); }
		public TerminalNode RightBracket(int i) {
			return getToken(MxStarParser.RightBracket, i);
		}
		public List<TerminalNode> Comma() { return getTokens(MxStarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MxStarParser.Comma, i);
		}
		public List<TerminalNode> Assign() { return getTokens(MxStarParser.Assign); }
		public TerminalNode Assign(int i) {
			return getToken(MxStarParser.Assign, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public VariableDefinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefination; }
	}

	public final VariableDefinationContext variableDefination() throws RecognitionException {
		VariableDefinationContext _localctx = new VariableDefinationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDefination);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TypeName);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LeftBracket) {
				{
				{
				setState(100);
				match(LeftBracket);
				setState(101);
				match(RightBracket);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(107);
			match(Identifier);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Assign) {
				{
				setState(108);
				match(Assign);
				setState(109);
				expression();
				}
			}

			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(112);
				match(Comma);
				setState(113);
				match(Identifier);
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Assign) {
					{
					setState(114);
					match(Assign);
					setState(115);
					expression();
					}
				}

				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VariableDefinationContext variableDefination() {
			return getRuleContext(VariableDefinationContext.class,0);
		}
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TypeName:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				variableDefination();
				}
				break;
			case LeftBrace:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				blockStatement();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				ifStatement();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				whileStatement();
				}
				break;
			case For:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				forStatement();
				}
				break;
			case Return:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				returnStatement();
				}
				break;
			case Break:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				breakStatement();
				}
				break;
			case Continue:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				continueStatement();
				}
				break;
			case FunctionIdentifier:
			case BooleanLiteral:
			case IntegerLiteral:
			case StringLiteral:
			case NullLiteral:
			case Identifier:
			case New:
			case This:
			case LeftParenthesis:
			case PlusPlus:
			case MinusMinus:
			case BitwiseNeg:
			case LogicalNeg:
			case Plus:
			case Minus:
				enterOuterAlt(_localctx, 9);
				{
				setState(133);
				expressionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public TerminalNode LeftBrace() { return getToken(MxStarParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(MxStarParser.RightBrace, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LeftBrace);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TypeName) | (1L << FunctionIdentifier) | (1L << BooleanLiteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << Identifier) | (1L << If) | (1L << For) | (1L << While) | (1L << Break) | (1L << Continue) | (1L << Return) | (1L << New) | (1L << This) | (1L << LeftBrace) | (1L << LeftParenthesis) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << BitwiseNeg))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (LogicalNeg - 65)) | (1L << (Plus - 65)) | (1L << (Minus - 65)))) != 0)) {
				{
				{
				setState(137);
				statement();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(MxStarParser.If, 0); }
		public TerminalNode LeftParenthesis() { return getToken(MxStarParser.LeftParenthesis, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParenthesis() { return getToken(MxStarParser.RightParenthesis, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode Else() { return getToken(MxStarParser.Else, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(If);
			setState(146);
			match(LeftParenthesis);
			setState(147);
			expression();
			setState(148);
			match(RightParenthesis);
			setState(149);
			statement();
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(150);
				match(Else);
				setState(151);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(MxStarParser.While, 0); }
		public TerminalNode LeftParenthesis() { return getToken(MxStarParser.LeftParenthesis, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParenthesis() { return getToken(MxStarParser.RightParenthesis, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whileStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(While);
			setState(155);
			match(LeftParenthesis);
			setState(156);
			expression();
			setState(157);
			match(RightParenthesis);
			setState(158);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStatementContext extends ParserRuleContext {
		public TerminalNode For() { return getToken(MxStarParser.For, 0); }
		public TerminalNode LeftParenthesis() { return getToken(MxStarParser.LeftParenthesis, 0); }
		public List<TerminalNode> Semi() { return getTokens(MxStarParser.Semi); }
		public TerminalNode Semi(int i) {
			return getToken(MxStarParser.Semi, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RightParenthesis() { return getToken(MxStarParser.RightParenthesis, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_forStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(For);
			setState(161);
			match(LeftParenthesis);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FunctionIdentifier) | (1L << BooleanLiteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << Identifier) | (1L << New) | (1L << This) | (1L << LeftParenthesis) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << BitwiseNeg))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (LogicalNeg - 65)) | (1L << (Plus - 65)) | (1L << (Minus - 65)))) != 0)) {
				{
				setState(162);
				expression();
				}
			}
